Add sample codes

--- a/Example/LemonDeer/Base.lproj/Main.storyboard
+++ b/Example/LemonDeer/Base.lproj/Main.storyboard
@@ -1,25 +1,110 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17A264c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="xga-Q9-zBE">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <scene sceneID="lUE-6b-xor">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="xga-Q9-zBE" customClass="ViewController" customModule="LemonDeer_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="fO6-Ka-OPh"/>
+                        <viewControllerLayoutGuide type="bottom" id="G4l-L4-VZT"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <view key="view" contentMode="scaleToFill" id="38Z-Zp-Di4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1CN-Ry-Iqh">
+                                <rect key="frame" x="79.5" y="252" width="216" height="230"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BPf-an-L8a">
+                                        <rect key="frame" x="0.0" y="0.0" width="216" height="30"/>
+                                        <state key="normal" title="Download"/>
+                                        <connections>
+                                            <action selector="download:" destination="xga-Q9-zBE" eventType="touchUpInside" id="epN-YN-CqR"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fsD-fO-rMr">
+                                        <rect key="frame" x="0.0" y="50" width="216" height="30"/>
+                                        <state key="normal" title="Play online video">
+                                            <color key="titleColor" red="1" green="0.090010747870000005" blue="0.98158211390000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playOnlineVideo:" destination="xga-Q9-zBE" eventType="touchUpInside" id="CXb-ik-KHH"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="am3-UZ-UkC">
+                                        <rect key="frame" x="0.0" y="100" width="216" height="30"/>
+                                        <state key="normal" title="Play local video">
+                                            <color key="titleColor" red="0.26552138479999998" green="0.20514784959999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playLocalVideo:" destination="xga-Q9-zBE" eventType="touchUpInside" id="ZKS-lW-Kxi"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nOY-9o-scr">
+                                        <rect key="frame" x="0.0" y="150" width="216" height="30"/>
+                                        <state key="normal" title="Delete content with name">
+                                            <color key="titleColor" red="1" green="0.41838150330000001" blue="0.27750421510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="deleteContentWithName:" destination="xga-Q9-zBE" eventType="touchUpInside" id="KJa-BY-I1L"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O33-vs-jPT">
+                                        <rect key="frame" x="0.0" y="200" width="216" height="30"/>
+                                        <state key="normal" title="Delete all downloaded contents">
+                                            <color key="titleColor" red="1" green="0.1345357251" blue="0.23593979000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="deleteDownloadedContents:" destination="xga-Q9-zBE" eventType="touchUpInside" id="hlm-LX-ABo"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w6o-wV-ijo" userLabel="Progress Label">
+                                <rect key="frame" x="185.5" y="562.5" width="4.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.4549019608" green="0.43921568630000002" blue="0.066666666669999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ARJ-zu-b6q">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="228"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="228" id="u8K-Cf-FDY"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="w6o-wV-ijo" firstAttribute="centerX" secondItem="1CN-Ry-Iqh" secondAttribute="centerX" id="1ut-MM-Wut"/>
+                            <constraint firstItem="ARJ-zu-b6q" firstAttribute="leading" secondItem="38Z-Zp-Di4" secondAttribute="leading" id="AUo-zH-qk9"/>
+                            <constraint firstItem="1CN-Ry-Iqh" firstAttribute="centerY" secondItem="38Z-Zp-Di4" secondAttribute="centerY" multiplier="1.1" id="Ai8-et-YWO"/>
+                            <constraint firstAttribute="trailing" secondItem="ARJ-zu-b6q" secondAttribute="trailing" id="EiK-vA-Wqv"/>
+                            <constraint firstItem="w6o-wV-ijo" firstAttribute="centerX" secondItem="38Z-Zp-Di4" secondAttribute="centerX" id="TxC-QM-VK4"/>
+                            <constraint firstItem="ARJ-zu-b6q" firstAttribute="top" secondItem="38Z-Zp-Di4" secondAttribute="top" id="b8j-xk-2i2"/>
+                            <constraint firstItem="1CN-Ry-Iqh" firstAttribute="centerX" secondItem="38Z-Zp-Di4" secondAttribute="centerX" id="cKN-Zm-N6l"/>
+                            <constraint firstItem="w6o-wV-ijo" firstAttribute="top" secondItem="1CN-Ry-Iqh" secondAttribute="bottom" constant="80.670000000000002" id="lzz-mV-ng7"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="downloadButton" destination="BPf-an-L8a" id="LKl-7A-7cp"/>
+                        <outlet property="playerView" destination="ARJ-zu-b6q" id="R72-eB-gSE"/>
+                        <outlet property="progressLabel" destination="w6o-wV-ijo" id="Rrw-9U-wlK"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rsJ-1x-Tvr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="31.884057971014496" y="39.945652173913047"/>
         </scene>
     </scenes>
 </document>
